erDiagram
    lib_authors ||--o{ lib_books : "writes"
    lib_books ||--o{ lib_copy : "has"
    lib_copy ||--o{ lib_loans : "loaned_as"
    lib_copy }o--|| lib_status : "has_status"

    lib_users ||--o{ lib_loans : "borrows"
    lib_users }o--|| lib_role : "has_role"
    lib_users ||--o{ lib_transactions : "receives (target)"
    lib_users ||--o{ lib_transactions : "initiates (actor)"
    lib_users ||--o{ lib_employee_codes : "creates"

    lib_transactions }o--|| lib_transactions_type : "has_type"
    lib_loans ||--o| lib_transactions : "generates"

    lib_authors {
        int id PK
        string firstName
        string surname
        timestamptz createdAt
        timestamptz updatedAt
        timestamptz deletedAt
    }

    lib_books {
        int id PK
        string title
        int authorId FK
        decimal price
        decimal fee
        timestamptz createdAt
        timestamptz updatedAt
        timestamptz deletedAt
    }

    lib_copy {
        int id PK
        int bookId FK
        int statusId FK
        timestamptz createdAt
        timestamptz updatedAt
    }

    lib_users {
        int id PK
        string username
        string password
        int roleId FK
        timestamptz createdAt
        timestamptz updatedAt
        timestamptz deletedAt
    }

    lib_loans {
        int id PK
        int copyId FK
        decimal price
        decimal fee
        date loanDate
        date deadLineDate
        date returnDate
        int borrowerId FK
        timestamptz createdAt
        timestamptz updatedAt
    }

    lib_transactions {
        int id PK
        decimal amount
        int targetUserId FK
        int actorId FK
        int transTypeId FK
        int loanId FK "nullable"
        timestamptz createdAt
        timestamptz updatedAt
    }

    lib_role {
        int id PK
        string roleName
    }

    lib_status {
        int id PK
        string status
    }

    lib_transactions_type {
        int id PK
        string type
    }

    lib_employee_codes {
        int id PK
        boolean isUsed
        string codeHash
        timestamptz expiresAt
        int createdById FK
        timestamptz createdAt
        timestamptz updatedAt
    }
